--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
                 best design
               </h2>
               <h1>
-<<<<<<< HEAD
-                Mobile445555<br />
-=======
-                Mobile44<br />
->>>>>>> ee2c1eed8ce867a8deeb9dd108814f8be9b8e85e
+                Mobile445555<br>
                 applications
               </h1>
               <div>
