--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 best design
               </h2>
               <h1>
-                Mobile4455556666<br>
+                Mobile<br>
+                nishitha<br>
                 applications
               </h1>
               <div>
